--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
   <meta charset="utf-8">
   <title>practice</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
-    <button id="get-joke">Random joke</button>
-    <p id="joke"></p>
+    <main>
+        <header>
+            <h1>Random quote machine</h1>
+        </header>
+        <div class="box">
+            <h2 class="quote"></h2>
+            <h3 class="author"></h3>
+        </div>
+        <div class="buttons">
+            <button class="trigger"> Random quote </button>
+            <a href="#" target="_blank" class="tweet"><i class="fab fa-twitter"></i>Tweet</a>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
