make search countries function

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="get-joke">Random joke</button>
-    <p id="joke"></p>
-    <script src="script.js"></script>
+  <h1>Country search engine</h1>
+  <button id="search">Search a country</button>
+  <input id="country-name" type="text" />
+  <h2>List of countries</h2>
+  <ul id="countries">
+    <li>No data</li>
+  </ul>
 </body>
 </html>
 
