--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <ul id="countries">
     <li>No data</li>
   </ul>
+  <button id="search-currency">Search a currency</button>
+  <input id="currency-name" type="text" />
+  <h2>List of currencies</h2>
+  <ul id="currency">
+    <li>No data</li>
+  </ul>
+  <script src="script.js"></script>
 </body>
 </html>
 
